--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/email-validation/email-validation.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/email-validation/email-validation.component.html
@@ -2,7 +2,21 @@
 
 <div class="header_space"></div>
 
-<div>
-    Todo une div en cas d'echec + lien de renvois de email.<br>
-    Et une autre div avec "Email validé. Bienvenido Mouchatchos"
+
+<div *ngIf="!haveRet; else divRet" >
+  <p>Veuilliez patienter nous interrogons le server</p>
 </div>
+
+<ng-template #divRet >
+  <div>
+    <div *ngIf="!isValidate; else divValidate" >
+      <p>Ce lien n'est pas valide pour confirmer votre email. <br>Auriez-vous déjà éffectué cette opération auparavant ? auquel cas, il n'est plus nécessaire de le faire.<br>Auriez-vous reçu un mail plus récent ? si oui, utiliser alors son lien. <br>Sinon, vous pouvez <a class="nav-link" routerLink="/login" >vous connecter</a> et demander l'envois d'un nouvel email de validation.<br></p>
+    </div>
+
+    <ng-template #divValidate >
+      <div>
+        <p>Votre email est validé.<br>Vous pouvez désormais <a class="nav-link" routerLink="/login" >vous connecter</a> pour accéder à nos services.<br>Bienvenue sur NoGashi.</p>
+      </div>
+    </ng-template>
+  </div>
+</ng-template>
