Ajout du component deactivate-account

--- a/angularProject/nogashiFront/src/app/components/root/app.component.html
+++ b/angularProject/nogashiFront/src/app/components/root/app.component.html
@@ -32,6 +32,7 @@
 
               <!-- Pages Common -->
                 <li routerLinkActive="active"><a routerLink="passwordReset">Réinitialisation de mot-de-passe</a></li>
+                <li routerLinkActive="active"><a routerLink="deactivateAccount">Désactivation du compte</a></li>
                 <li routerLinkActive="active"><a routerLink="shoppingCart">1.Panier-commande</a></li>
                 <li routerLinkActive="active"><a routerLink="commandRecap">2.Résumé-commande</a></li>
                 <li routerLinkActive="active"><a routerLink="commandPayment">3.Paiement-commande</a></li>
@@ -39,7 +40,7 @@
                 <li routerLinkActive="active"><a routerLink="tchat">Tchat</a></li>
                 <li routerLinkActive="active"><a routerLink="productSheet">Fiche produit</a></li>
 
-              <!-- Pages indivual -->
+              <!-- Pages individual -->
                 <li routerLinkActive="active"><a routerLink="individual/welcome">Accueil - Compte particulier</a></li>
 
               <!-- Pages merchant -->
