--- a/demo-front-nogashi/css/compte.css
+++ b/demo-front-nogashi/css/compte.css
@@ -320,28 +320,26 @@ nav {
            /* SECTION - Bonjour */
 .bloc-bonjour-compte {
     background-color: var(--couleurGrisClair);
-    border-top: 1px solid var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurVerte);
+    border-bottom: 2px solid var(--couleurNoir);
     display: flex;
-    margin-top: 150px;
+    margin-top: 55px;
     padding-top: 20px;
     padding-bottom: 20px;
-    
 }
 
 .bloc-avatar {
-    margin-left: 50px;
+    margin-left: 90px;
 }
 
 .img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%; 
 }
 
 .bloc-bonjour {
-    margin-left: 50px;
-    margin-top: 60px;
+    margin-left: 40px;
+    margin-top: 40px;
 }
 
 h2 {
@@ -367,11 +365,18 @@ h2 {
 
            /* SECTION - Bonjour-Compte */
 
+.grand-bloc-onglets {
+    width: 100%;
+    border-bottom: 1px solid var(--couleurNoir);
+    background-color: var(--couleurVerte);
+    padding-bottom: 30px;
+}
+
 .bloc-onglet {
     display: flex;
+    margin-top: 30px;
     margin-left: 50%;
     transform: translate(-50%);
-    margin-top: 50px;
     box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
 }
 
@@ -407,7 +412,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .onglet2:hover {
@@ -429,7 +434,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .onglet3:hover {
@@ -452,7 +457,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .onglet4:hover {
