--- a/demo-front-nogashi/css/compte-preferences.css
+++ b/demo-front-nogashi/css/compte-preferences.css
@@ -318,30 +318,29 @@ nav {
 
 
            /* SECTION - Bonjour */
+
 .bloc-bonjour-compte {
     background-color: var(--couleurGrisClair);
-    border-top: 1px solid var(--couleurNoir);
-    border-bottom: 1px solid var(--couleurVerte);
+    border-bottom: 2px solid var(--couleurNoir);
     display: flex;
-    margin-top: 150px;
+    margin-top: 55px;
     padding-top: 20px;
     padding-bottom: 20px;
-    
 }
 
 .bloc-avatar {
-    margin-left: 50px;
+    margin-left: 90px;
 }
 
 .img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%; 
 }
 
 .bloc-bonjour {
-    margin-left: 50px;
-    margin-top: 60px;
+    margin-left: 40px;
+    margin-top: 40px;
 }
 
 h2 {
@@ -367,11 +366,18 @@ h2 {
 
            /* SECTION - Bonjour-Compte */
 
+.grand-bloc-onglets {
+    width: 100%;
+    border-bottom: 1px solid var(--couleurNoir);
+    background-color: var(--couleurVerte);
+    padding-bottom: 30px;
+}
+
 .bloc-onglet {
     display: flex;
+    margin-top: 30px;
     margin-left: 50%;
     transform: translate(-50%);
-    margin-top: 50px;
     box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
 }
 
@@ -389,7 +395,11 @@ h2 {
     background-color: var(--couleurNoir);
     padding: 10px;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
+}
+
+.onglet:hover {
+    opacity: 1;
 }
 
 .onglet2 {
@@ -429,7 +439,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .onglet3:hover {
@@ -452,7 +462,7 @@ h2 {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
     cursor: pointer;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .onglet4:hover {
@@ -541,7 +551,8 @@ titre-inscription {
 }
 
 .bloc-regime-alimentaire {
-    display: inline-flex;
+    width: 100%;
+    display: flex;
 }
 
 .bloc1 {
@@ -638,7 +649,6 @@ titre-inscription {
 .checkbox {
     margin-right: 8px;
 }
-
 
 .bloc-checkbox2 {
     font-family: 'roboto', sans-serif;
@@ -778,10 +788,10 @@ input[type=password]:focus {
 .bouton-enregistrer {
     font-family: sans-serif;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 1em;
     text-transform: uppercase;
     text-align: center;
-    color: var(--couleurBlancCreme);
+    color: var(--couleurVerte);
     background: rgba(255, 82, 47, 1);
     background: var(--couleurNoir);
     border-radius: 20px;
@@ -804,13 +814,129 @@ input[type=password]:focus {
 
    /* SECTION -> Bloc Recherches Par Defaut */
 
+.section-recherche-defaut {
+    margin-top: 30px;
+}
+
 .bloc-edition-profil2 {
-    color: var(--couleurBlancCreme);
-    background-color: var(--couleurNoir);
+    color: var(--couleurNoir);
+    background-color: var(--couleurGrisClair);
     box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.10);
     padding-top: 50px;
     padding-bottom: 40px;
 }
+
+.titre-rechercher-produit {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.1em;
+    font-weight: 600;
+    color: var(--couleurNoir);
+    text-align: left;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    margin-left: 60px;
+    margin-top: 90px;
+}
+
+.bloc-map {
+    width: 100%;
+    background-color: var(--couleurBlancCreme);
+    box-shadow: 10px 15px 20px 2px rgba(0,0,0,0.15);
+    padding: 40px;
+}
+
+.bloc-input-recherche {
+   display: flex;
+   margin-bottom: 40px;
+}
+
+.display-input {
+    display: flex;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.bloc-ou {
+    background-color: var(--couleurNoir);
+    box-shadow: 4px 4px 10px 2px rgba(0,0,0,0.15);
+}
+
+.bloc-quoi {
+    background-color: var(--couleurNoir);
+    box-shadow: 4px 4px 10px 2px rgba(0,0,0,0.15);
+}
+
+.text-input {
+    font-family: 'roboto', sans-serif;
+    font-size: 0.85em;
+    font-weight: 600;
+    font-style: italic;
+    color: var(--couleurVerte);
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+}
+
+.recherche-ou {
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    font-family: 'roboto', sans-serif;
+    font-size: 0.8em;
+    font-weight: 400;
+    font-style: italic;
+    color: var(--couleurNoir);
+    padding-left: 15px;
+    margin-left: 50%;
+    transform: translate(-50%);
+}
+
+.recherche-quoi {
+    height: 30px;
+    font-family: 'roboto', sans-serif;
+    font-size: 0.8em;
+    font-weight: 400;
+    font-style: italic;
+    color: var(--couleurNoir);
+    border-radius: 20px;
+    border: none;
+    padding-left: 15px;
+    margin-left: 50%;
+    margin-bottom: 35px;
+    transform: translate(-50%);
+}
+
+.bouton-valider {
+    width: 180px;
+    font-family: sans-serif;
+    font-weight: 600;
+    font-size: 1em;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--couleurVerte);
+    background: var(--couleurNoir);
+    border: none;
+    border-radius: 28px;
+    transform: translate(0%, 0%);
+    padding: 15px 20px 15px 20px;
+    margin-top: 30px;    
+    margin-left: 50%;
+    transform: translate(-50%);
+    -webkit-box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 9px 6px -6px rgba(0, 0, 0, 0.3);
+    -webkit-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out; 
+    cursor: pointer;
+}
+
+.bouton-valider:hover {
+    color: var(--couleurNoir);
+    background:  var(--couleurVerte);
+}
+
+   /* SECTION -> Bloc Abonnements & Notifications */
+
 
 
 
