-gestion modification de mot de passe.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
@@ -4,19 +4,20 @@
 <section class="section-connexion">
     <div class="bloc-formulaire-connexion">
         <div class="bloc-titre-connexion">
-            <h1 class="titre-connexion">// Modification de Mot de passe</h1>
+            <h1 class="titre-connexion">// Demande de modification de Mot de passe</h1>
             <br>
             <br>
             <p class="texte-connexion col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum</p>
-            <br>   
+            <br>
         </div>
-        
-        <form class="formulaire-connexion" action="" method="get">
-            <label for="email" class="label-formulaire"><i class="fas fa-asterisk"></i> Email</label>
-            <input id="email" class="email" type="text" name="email" placeholder="@Email" >
-            <span id="emailRegex" class="pseudo-regex"></span>  
-        
-            <a href=""><div id ="bouton-connexion" class="bouton-connexion">Envoyer</div></a>
+
+        <form class="formulaire-connexion" [formGroup]="form1" (submit)="onSubmit()" >
+
+          <label class="label-formulaire"><i class="fas fa-asterisk"></i> Email</label>
+          <input formControlName="email" name="email" class="email" type="text" placeholder="@Email" required>
+          <span class="text-danger" *ngIf="controlEmail(); let message">{{message}}</span>
+
+          <button id="bouton-connexion" class="bouton-connexion" type="submit" [disabled]="form1.invalid" >ENVOYER</button>
         </form>
     </div>
- </section>  
+ </section>
