Ajout du component list-products-templates (en cours)

--- a/angularProject/nogashiFront/src/app/components/root/app.component.html
+++ b/angularProject/nogashiFront/src/app/components/root/app.component.html
@@ -46,6 +46,7 @@
               <!-- Pages merchant -->
                 <li routerLinkActive="active"><a routerLink="merchant/welcome">Accueil - Compte commerçant</a></li>
                 <li routerLinkActive="active"><a routerLink="merchant/faq">F.A.Q. $merchant</a></li>
+                <li routerLinkActive="active"><a routerLink="merchant/listProductsTemplates">Liste des fiches produits (test)</a></li>
 
               <!-- Pages association -->
                 <li routerLinkActive="active"><a routerLink="association/welcome">Wc Asso</a></li>
