(Version a ne pas prendre, c'est tout casser) -J'ai rajouté quelques Class Beans relatives aux Commerces. Ce qui m'a conduit a rajouter le Merchant , qui avec l'héritage créer un soucis avec le getUser() avec Hibernate/Jpa/MySql. Donc, voila, on va voir demain.

--- a/angularProject/nogashiFront/src/app/components/tests/test-spring-rest/test-spring-rest.component.html
+++ b/angularProject/nogashiFront/src/app/components/tests/test-spring-rest/test-spring-rest.component.html
@@ -4,6 +4,7 @@
 
 <div class="col-xs-12">
     <div *ngIf="users">
+        <h2>List Users :</h2>
         <table class="table table-bordered table-hover">
             <thead>
                 <th>Id</th>
