-regle le probleme de heritage entre User et Merchant. + problem list commerce fait le marchant.

--- a/angularProject/nogashiFront/src/app/components/tests/connexion/connexion.component.html
+++ b/angularProject/nogashiFront/src/app/components/tests/connexion/connexion.component.html
@@ -4,3 +4,29 @@
 <h2>Authentification</h2>
 <button class="btn btn-success" *ngIf="!authStatus" (click)="onSignIn()">Se connecter</button>
 <button class="btn btn-danger" *ngIf="authStatus" (click)="onSignOut()">Se déconnecter</button>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-6">
+      2 of 3 (wider)
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-5">
+      2 of 3 (wider)
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
