Listing Products Templates

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/list-products-templates/list-products-templates.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/list-products-templates/list-products-templates.component.html
@@ -8,10 +8,10 @@
       <thead>
       <th>Id</th>
       <th>Name</th>
-      <th>description</th>
-      <th>externalCode</th>
+      <th>Description</th>
+      <th>ExternalCode</th>
       <th>isWrapped</th>
-      <th>price</th>
+      <th>Price</th>
     <!--  <th>salePrice</th>
       <th>saleTime</th>
       <th>unsoldTime</th>
