--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
@@ -12,7 +12,7 @@
               <div class="croix-img">
                 <i class="fas fa-times"></i>
               </div>
-              <img class="affichage-img" src="css/img/diaporama/boulangerie.jpg" alt="image du commerce partenaire">
+              <img class="affichage-img" src="/assets/img/diaporama/boulangerie.jpg" alt="image du commerce partenaire">
             </div>
             <div class="bloc-nom-affichage">
               <h4 class="titre-affichage-commerce"><i class="fas fa-circle"></i> Subways</h4>
@@ -53,14 +53,14 @@
         <div class="grand-bloc-commerce col-6">
           <h4 class="titre-commerce"><i class="fas fa-dot-circle"></i> Les Commerces Partenaires</h4>
           <div class="nom-commerce">
-            <img class="logo-commerce" src="css/img/commerce/basilic.png" alt="">   <div class="texte">
+            <img class="logo-commerce" src="/assets/img/commerce/basilic.png" alt="">   <div class="texte">
             <p class="marque-commerce">Basilic&amp;Co</p>
             <p class="adresse-commerce">80 Rue Nationale, 59800 Lille</p>
           </div>
           </div>
           <br>
           <div class="nom-commerce">
-            <img class="logo-commerce" src="css/img/commerce/freshway.jpg" alt="">
+            <img class="logo-commerce" src="/assets/img/commerce/freshway.jpg" alt="">
             <div class="texte">
               <p class="marque-commerce">Freshway</p>
               <p class="adresse-commerce">141 Boulevard de la Liberté, 59800 Lille</p>
@@ -68,7 +68,7 @@
           </div>
           <br>
           <div class="nom-commerce">
-            <img class="logo-commerce" src="css/img/commerce/daily-juicery.png" alt="">
+            <img class="logo-commerce" src="/assets/img/commerce/daily-juicery.png" alt="">
             <div class="texte">
               <p class="marque-commerce">Daily-juicery</p>
               <p class="adresse-commerce">380 Rue Léon Gambetta, 59000 Lille</p>
@@ -76,7 +76,7 @@
           </div>
           <br>
           <div class="nom-commerce">
-            <img class="logo-commerce" src="css/img/commerce/boulangerie-mathieu.jpeg" alt="">
+            <img class="logo-commerce" src="/assets/img/commerce/boulangerie-mathieu.jpeg" alt="">
             <div class="texte">
               <p class="marque-commerce">Boulangerie-Mathieu</p>
               <p class="adresse-commerce">82 Rue du Molinel, 59000 Lille</p>
@@ -85,16 +85,16 @@
         </div>
         <div class="grand-bloc-association col-6">
           <h4 class="titre-association"><i class="far fa-dot-circle"></i> Les Associations Partenaires</h4>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/tente-des-glaneurs.jpeg" alt="logo de l'association">
+          <a href="http://latentedesglaneurs.fr/"><div>
+            <img class="cercle-association" src="/assets/img/association/tente-des-glaneurs.jpeg" alt="logo de l'association">
             <p class="nom-association">&#9679; La Tente Des Glaneurs</p>
           </div></a>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/gaspilleurs.png" alt="logo de l'association">
+          <a href="http://lesgarspilleurs.org/"><div>
+            <img class="cercle-association" src="/assets/img/association/gaspilleurs.png" alt="logo de l'association">
             <p class="nom-association">&#9679; Les Gars'pilleurs</p>
           </div></a>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/banque-alimentaire02.png" alt="logo de l'association">
+          <a href="https://www.banquealimentaire.org/"><div>
+            <img class="cercle-association" src="/assets/img/association/banque-alimentaire02.png" alt="logo de l'association">
             <p class="nom-association">&#9679; Banques Alimentaire du Nord</p>
           </div></a>
           <br>
