--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
@@ -2,7 +2,7 @@
 <section class="section-faq">
   <div class="container">
     <div class="row">
-      <div class="bloc-faq col-12">
+      <div class="bloc-faq col col-12">
         <h1 class="titre-faq"><i class="fas fa-question-circle"></i> // F.A.Q Générale</h1>
         <p class="texte-faq">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis,<br> sic constituetis, iudices, nec descensurum quemquam ad han si attendere. </p>
         <div class="bloc-question col-12">
