--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.scss
@@ -1,3 +1,9 @@
+/* BACKGROUND */
+.background {
+  background-image: url("/assets/img/pattern/groovepaper2.png");
+
+}
+
 
 /* SECTION -> Tchat */
 .titre-tchat {
