--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.html
@@ -1,62 +1,61 @@
 
 <!-- SECTION -> Tchat -->
-<section class="section-tchat">
-  <div class="container">
-    <div class="row">
-      <div class="bloc-titre-tchat col-12">
-        <h1 class="titre-tchat">// TCHAT <i class="far fa-comment-dots"></i></h1>
-        <br>
-        <br>
-        <p class="texte-tchat col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum. Etenim si attendere diligenter, existimare vere de.</p>
-        <br>
+<div class="background">
+  <section class="section-tchat">
+    <div class="container">
+      <div class="row">
+        <div class="bloc-titre-tchat col-12">
+          <h1 class="titre-tchat"> <i class="far fa-comment-dots"></i> / TCHAT</h1>
+          <br>
+          <br>
+          <p class="texte-tchat col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum. Etenim si attendere diligenter, existimare vere de.</p>
+          <br>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="section-conversation">
-  <div class="container">
-    <div class="row no-gutters">
-      <div class="bloc-conversation col-12">
-        <div class="conversation col-10">
-          <form class="champs-conversation" action="">
-            <p class="texte-ecriture"><i class="far fa-comment-dots"></i> Historique des conversations :</p>
-            <textarea id="" class="textarea-conversation " name=""></textarea>
-          </form>
-        </div>
-        <div class="bloc-detail col-2">
-          <div class="avatar">
-            <img class="logo-commerce" src="css/img/commerce/boulangerie-mathieu.jpeg" alt="logo du commerce">
+  <section class="section-conversation">
+    <div class="container">
+      <div class="row no-gutters">
+        <div class="bloc-conversation col-12">
+          <div class="conversation col-10">
+            <form class="champs-conversation" action="">
+              <p class="texte-ecriture"><i class="far fa-comment-dots"></i> Historique des conversations :</p>
+              <textarea id="" class="textarea-conversation " name=""></textarea>
+            </form>
           </div>
-          <div class="bloc-nom-commerce">
-            <p class="nom-commerce">Boulangerie Mathieu</p>
-          </div>
-          <div class="bloc-presence">
-            <p class="ligne">en ligne</p>
+          <div class="bloc-detail col-2">
+            <div class="avatar">
+              <img class="logo-commerce" src="/assets/img/commerce/boulangerie-mathieu.jpeg" alt="logo du commerce">
+            </div>
+            <div class="bloc-nom-commerce">
+              <p class="nom-commerce">Boulangerie Mathieu</p>
+            </div>
+            <div class="bloc-presence">
+              <p class="ligne">en ligne</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="section-message">
-  <div class="container">
-    <div class="row no-gutters">
-      <div class="bloc-message col-10">
-        <div class="ecriture-message">
-          <!--<div class="avatar col-1">
-              <img class="image-profil" src="css/img/profil/profil.png" alt="">
-          </div> -->
-          <div class="zone-ecriture col-12">
-            <p class="texte-ecriture"><i class="far fa-comment-dots"></i> Ecrivez votre message ici :</p>
-            <textarea class="textarea-ecriture" name="" id="" cols="30" rows="10"></textarea>
+  </section>
+  <section class="section-message">
+    <div class="container">
+      <div class="row no-gutters">
+        <div class="bloc-message col-10">
+          <div class="ecriture-message">
+            <div class="zone-ecriture col-12">
+              <p class="texte-ecriture"><i class="far fa-comment-dots"></i> Ecrivez votre message ici :</p>
+              <textarea class="textarea-ecriture" name="" id="" cols="30" rows="10"></textarea>
+            </div>
           </div>
-        </div>
-        <div class="bloc-envoyer col-12">
-          <a href=""><div id ="bouton-envoyer" class="bouton-envoyer">envoyer message</div></a>
+          <div class="bloc-envoyer col-12">
+            <a href=""><div id ="bouton-envoyer" class="bouton-envoyer">envoyer message</div></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
