--- a/angularProject/nogashiFront/src/app/components/root/app.component.html
+++ b/angularProject/nogashiFront/src/app/components/root/app.component.html
@@ -16,7 +16,7 @@
 <app-info-box-notifications></app-info-box-notifications>
 
 <!-- Todo remove -->
-<nav class="navbar navbar-default" style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 999;">
+<nav class="navbar navbar-default" style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 999; width: 20%;">
     <div class="container-fluid">
         <div class="navbar-collapse">
             <ul class="nav navbar-nav">
