(à ne pas prendre) commit temporaire avant pull

--- a/angularProject/nogashiFront/src/app/components/tests/test-spring-rest/test-spring-rest.component.html
+++ b/angularProject/nogashiFront/src/app/components/tests/test-spring-rest/test-spring-rest.component.html
@@ -77,3 +77,44 @@
     </table>
   </div>
 </div>
+
+
+
+<div class="col-xs-12">
+  <div *ngIf="listProductsTemplates">
+    <h2>List Products Templates :</h2>
+    <table class="table table-bordered table-hover">
+      <thead>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>ExternalCode</th>
+      <th>isWrapped</th>
+      <th>Price</th>
+      <!--  <th>salePrice</th>
+        <th>saleTime</th>
+        <th>unsoldTime</th>
+        <th>timeControlStatus</th>
+        <th>maxDurationCart</th>-->
+      </thead>
+      <tbody>
+      <tr *ngFor="let pt of listProductsTemplates">
+        <td>{{pt.id}} </td>
+        <td>{{pt.name}}</td>
+        <td>{{pt.description}}</td>
+        <td>{{pt.externalCode}}</td>
+        <td>{{pt.isWrapped}}</td>
+        <td>{{pt.price}}</td>
+        <!-- <td>{{pt.salePrice}}</td>
+         <td>{{pt.saleTime}}</td>
+         <td>{{pt.unsoldTime}}</td>
+         <td>{{pt.timeControlStatus}}</td>
+         <td>{{pt.maxDurationCart}}</td>-->
+
+        <td><img src="{{listProductsTemplates.imageFilename}}" alt="avatar" class="img-thumbnail mx-auto d-block" style="width: 30%" /></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+</div>
