--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/list-products-templates/list-products-templates.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/list-products-templates/list-products-templates.component.html
@@ -1,40 +1,37 @@
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 
-<div class="header_space"></div>
+<section>
+  <h2>Ajout d'une fiche produit :</h2>
+  <form class="" [formGroup]="form1" (submit)="onSubmit()" >
 
-<div class="col-xs-12">
-  <div *ngIf="listProductsTemplates">
-    <table class="table table-bordered table-hover">
-      <thead>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>ExternalCode</th>
-      <th>isWrapped</th>
-      <th>Price</th>
-    <!--  <th>salePrice</th>
-      <th>saleTime</th>
-      <th>unsoldTime</th>
-      <th>timeControlStatus</th>
-      <th>maxDurationCart</th>-->
-      </thead>
-      <tbody>
-      <tr *ngFor="let pt of listProductsTemplates">
-        <td>{{pt.id}} </td>
-        <td>{{pt.name}}</td>
-        <td>{{pt.description}}</td>
-        <td>{{pt.externalCode}}</td>
-        <td>{{pt.isWrapped}}</td>
-        <td>{{pt.price}}</td>
-       <!-- <td>{{pt.salePrice}}</td>
-        <td>{{pt.saleTime}}</td>
-        <td>{{pt.unsoldTime}}</td>
-        <td>{{pt.timeControlStatus}}</td>
-        <td>{{pt.maxDurationCart}}</td>-->
+    <label class="label-formulaire"><i class="fas fa-asterisk" ></i> Nom du produit :</label>
+    <input formControlName="name" name="name" class="name" type="text" placeholder="Nom" required>
+    <span class="text-danger" *ngIf="controlName(); let message">{{message}}</span>
 
-        <td><img src="{{listProductsTemplates.imageFilename}}" alt="avatar" class="img-thumbnail mx-auto d-block" style="width: 30%" /></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+    <label class="label-formulaire"><i class="fas fa-asterisk"></i> Description :</label>
+    <input formControlName="description" name="description" class="description" type="text" placeholder="Description" required>
+    <span class="text-danger" *ngIf="controlName(); let message">{{message}}</span>
+
+    <label class="label-formulaire"><i class="fas fa-asterisk"></i> Prix</label>
+    <input formControlName="price" name="price" class="price" type="text" placeholder="Prix" required>
+    <!-- <span class="text-danger" *ngIf="controlPrice(); let message">{{message}}</span>-->
+
+    <div class="bloc-checkbox3">
+      <input formControlName="isWrapped" name="isWrapped" class="checkbox3" type="checkbox">
+      <label class="label" >Produit emballé</label>
+    </div>
+
+    <button id ="bt_signin_submit" class="bouton-inscription" type="submit" [disabled]="form1.invalid" >Ajouter la fiche</button>
+    <p *ngIf="form1.invalid" class="avertissement-inscription">* Veuillez remplir tous les champs pour valider la fiche.</p>
+  </form >
+
+</section>
