Ajout des components compte et commandes liées au compte dans le projet Angular.

--- a/angularProject/nogashiFront/src/app/components/root/app.component.html
+++ b/angularProject/nogashiFront/src/app/components/root/app.component.html
@@ -39,6 +39,8 @@
                 <li routerLinkActive="active"><a routerLink="commandConfirmation">4.Confirmation-commande</a></li>
                 <li routerLinkActive="active"><a routerLink="tchat">Tchat</a></li>
                 <li routerLinkActive="active"><a routerLink="productSheet">Fiche produit</a></li>
+                <li routerLinkActive="active"><a routerLink="myProfile">Compte utilisateur</a></li>
+              <li routerLinkActive="active"><a routerLink="myOrders">Compte utilisateur - commandes</a></li>
 
               <!-- Pages individual -->
                 <li routerLinkActive="active"><a routerLink="individual/welcome">Accueil - Compte particulier</a></li>
